touch/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mypod
spec:
 replicas: 1
 selector:
  matchLabels:
   app: web
 template:
  metadata:
   name: mypod
   labels: 
    app: web 
  spec:
   volumes:
   - name: webdata
     emptyDir: {}
   containers:
   - image: nginx
     name: nginx
     ports:
     - containerPort: 80
     volumeMounts:
     - name: webdata
       mountPath: "/usr/share/nginx/html"

---

apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx
spec: 
 replicas: 1
 selector:
  matchLabels: 
   app: web1
 template:
  metadata: 
   name: web1
   labels:
    app: web1
  spec:
   volumes:
   - name: webdata
     emptyDir: {}
   containers:
   - name: nginx
     image: nginx
     ports:
     - containerPort: 80
     volumeMounts:
     - name: webdata
       mountPath: "/usr/share/nginx/html/"
