touch/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress 
 labels:
  app: myingress
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
 ingressClassName: nginx
 rules:
 - http:
    paths:
    - path: /web2
      pathType: Prefix
      backend: 
       service:
         name: svc
         port:
          number: 80
    - path: /
      pathType: Prefix
      backend: 
       service:
        name: svc3
        port:
         number: 80
